Put ser/de into separate util for TableConfig and Schema